--- a/cicd/k8s/order/容器网络-2.md
+++ b/cicd/k8s/order/容器网络-2.md
@@ -46,34 +46,90 @@ default via 10.168.0.1 dev eth0
 所以，当 IP 包从容器经过 docker0 出现在宿主机，然后又根据路由表进入 flannel0 设备后，宿主机上的 flanneld 进程（Flannel 项目在每个宿主机上的主进程），就会收到这个 IP包。然后，flanneld 看到了这个 IP 包的目的地址，是 100.96.2.3，就把它发送给了 Node 2宿主机。
 ```
 
+flanneld 又是如何知道这个 IP 地址对应的容器，是运行在 Node2上的呢 ?
 
+这里就用到了 Flannel 项目里一个非常重要的概念：子网（Subnet）。
 
+事实上，在由 Flannel 管理的容器网络里，一台宿主机上的所有容器，都属于该宿主机被分配的一个“子网”。在上述例子中，Node 1 的子网是 100.96.1.0/24，container-1 的 IP 地址是 100.96.1.2。Node 2 的子网是 100.96.2.0/24，container-2 的 IP 地址是100.96.2.3。
 
+这些子网与宿主机的对应关系，正是保存在 Etcd 当中，如下所示：
+```text
+$ etcdctl ls /coreos.com/network/subnets
+/coreos.com/network/subnets/100.96.1.0/24
+/coreos.com/network/subnets/100.96.2.0/24
+/coreos.com/network/subnets/100.96.3.0/24
+```
+所以，flanneld 进程在处理由 flannel0 传入的 IP 包时，就可以根据目的 IP 的地址（比如100.96.2.3），匹配到对应的子网（比如 100.96.2.0/24），从 Etcd 中找到这个子网对应的宿主机的 IP 地址是 10.168.0.3，如下所示：
+```text
+$ etcdctl get /coreos.com/network/subnets/100.96.2.0-24
+{"PublicIP":"10.168.0.3"}
+```
+而对于 flanneld 来说，只要 Node 1 和 Node 2 是互通的，那么 flanneld 作为 Node 1 上的一个普通进程，就一定可以通过上述 IP 地址（10.168.0.3）访问到 Node 2。
 
+所以说，flanneld 在收到 container-1 发给 container-2 的 IP 包之后，就会把这个 IP 包直接封装在一个 UDP 包里，然后发送给 Node 2。不难理解，这个 UDP 包的源地址，就是flanneld 所在的 Node 1 的地址，而目的地址，则是 container-2 所在的宿主机 Node 2 的地址。
 
+这个请求得以完成的原因是每台宿主机上的 flanneld，都监听着一个 8285 端口，所以 flanneld 只要把 UDP 包发往 Node 2 的 8285 端口。
 
+通过这样一个普通的、宿主机之间的 UDP 通信，一个 UDP 包就从 Node 1 到达了 Node2。而 Node 2 上监听 8285 端口的进程也是 flanneld，所以这时候，flanneld 就可以从这个UDP 包里解析出封装在里面的、container-1 发来的原IP包信息。
 
+接下来 flanneld 的工作就简单了：flanneld 会直接把这个 IP 包发送给它所管理的TUN 设备，即 flannel0 设备。
 
+TUN 设备的原理，这正是一个从用户态向内核态的流动方向（Flannel 进程向 TUN 设备发送数据包），所以 Linux 内核网络栈就会负责处理这个 IP 包，具体的处理方法，就是通过本机的路由表来寻找这个 IP 包的下一步流向。
 
+而 Node 2 上的路由表，跟 Node 1 非常类似，如下：
+```text
+# 在 Node 2 上
+$ ip route
+default via 10.168.0.1 dev eth0
+100.96.0.0/16 dev flannel0  proto kernel  scope link  src 100.96.2.0
+100.96.2.0/24 dev docker0  proto kernel  scope link  src 100.96.2.1
+10.168.0.0/24 dev eth0  proto kernel  scope link src 10.168.0.3
+```
+由于这个 IP 包的目的地址是 100.96.2.3，它跟第三条、也就是 100.96.2.0/24 网段对应的路由规则匹配更加精确。所以，Linux 内核就会按照这条路由规则，把这个 IP 包转发给docker0 网桥。
 
+接下来的流程里，docker0 网桥会扮演二层交换机的角色，将数据包发送给正确的端口，进而通过 Veth Pair 设备进入到container-2 的 Network Namespace里。
 
+而 container-2 返回给 container-1 的数据包，则会经过与上述过程完全相反的路径回到container-1 中。
 
+需要注意的是，上述流程要正确工作还有一个重要的前提，那就是 docker0 网桥的地址范围必须是 Flannel 为宿主机分配的子网。这个很容易实现，以 Node 1 为例，需要给它上面的 Docker Daemon 启动时配置如下所示的 bip 参数：
+```text
+$ FLANNEL_SUBNET=100.96.1.1/24
+$ dockerd --bip=$FLANNEL_SUBENT ...
+```
 
+基于 Flannel UDP 模式的跨主通信的基本原理如下：
+![Flannel UDP 模式的跨主通信的基本原理](image/FlannelUDP模式的跨主通信的基本原理.png)
 
+可以看到，Flannel UDP 模式提供的其实是一个三层的 Overlay 网络，即：首先对发出端的 IP 包进行 UDP 封装，然后在接收端进行解封装拿到原始的 IP 包，进而把这个 IP 包转发给目标容器。这就好比，Flannel 在不同宿主机上的两个容器之间打通了一条“隧道”，使得这两个容器可以直接使用 IP 地址进行通信，而无需关心容器和宿主机的分布情况。
 
+上述 UDP 模式有严重的性能问题，所以已经被废弃了，有没有发现性能问题出现在了哪里？
 
+实际上，相比于两台宿主机之间的直接通信，基于 Flannel UDP 模式的容器通信多了一个额外的步骤，即 flanneld 的处理过程。而这个过程，由于使用到了 flannel0 这个 TUN 设备，仅在发出 IP 包的过程中，就需要经过三次用户态与内核态之间的数据拷贝，如下所示：
+![TUN设备示意图](image/TUN设备示意图.png)
 
+步骤如下：
+```text
+第一次：用户态的容器进程发出的 IP 包经过 docker0 网桥进入内核态；
+第二次：IP 包根据路由表进入 TUN（flannel0）设备，从而回到用户态的 flanneld 进程；
+第三次：flanneld 进行 UDP 封包之后重新进入内核态，将 UDP 包通过宿主机的 eth0 发出去。
+```
 
+此外还可以看到，Flannel 进行 UDP 封装（Encapsulation）和解封装（Decapsulation）的过程，也都是在用户态完成的。在 Linux 操作系统中，上下文切换和用户态操作的代价其实是比较高的，这也正是造成 Flannel UDP 模式性能不好的主要原因。
 
+所以在进行系统级编程的时候，有一个非常重要的优化原则，就是要减少用户态到内核态的切换次数，并且把核心的处理逻辑都放在内核态进行。这也是为什么，Flannel 后来支持的VXLAN 模式，逐渐成为了主流的容器网络方案的原因。
 
+VXLAN，即 Virtual Extensible LAN（虚拟可扩展局域网），是 Linux 内核本身就支持的一种网络虚似化技术。所以说，VXLAN 可以完全在内核态实现上述封装和解封装的工作，从而通过与前面相似的“隧道”机制，构建出覆盖网络（Overlay Network）。
 
+VXLAN 的覆盖网络的设计思想是：在现有的三层网络之上，“覆盖”一层虚拟的、由内核VXLAN 模块负责维护的二层网络，使得连接在这个 VXLAN 二层网络上的“主机”（虚拟机或者容器都可以）之间，可以像在同一个局域网（LAN）里那样自由通信。当然，实际上，这些“主机”可能分布在不同的宿主机上，甚至是分布在不同的物理机房里。
 
+而为了能够在二层网络上打通“隧道”，VXLAN 会在宿主机上设置一个特殊的网络设备作为“隧道”的两端。这个设备就叫作 VTEP，即：VXLAN Tunnel End Point（虚拟隧道端点）。
 
+而 VTEP 设备的作用，其实跟前面的 flanneld 进程非常相似。只不过，它进行封装和解封装的对象，是二层数据帧（Ethernet frame）；而且这个工作的执行流程，全部是在内核里完成的（因为 VXLAN 本身就是 Linux 内核中的一个模块）。
 
+基于 VTEP 设备进行“隧道”通信流程如下：
+![基于VTEP设备进行隧道通信流程](image/基于VTEP设备进行隧道通信流程.png)
 
-
-
-
+可以看到，图中每台宿主机上名叫 flannel.1 的设备，就是 VXLAN 所需的 VTEP 设备，它既有 IP 地址，也有 MAC 地址。
 
 
 
