--- a/cicd/istio/3、流量控制.md
+++ b/cicd/istio/3、流量控制.md
@@ -1,3 +1,7 @@
+- [部署 Bookinfo](https://istio.io/latest/docs/examples/bookinfo/)
+
+- [示例地址](https://istio.io/latest/zh/docs/tasks/traffic-management/request-routing/)
+
 ### 动态路由:用Virtual Service和 Destination Rule设置路由规则
 - 虚拟服务(Virtual Service) 
   - 定义路由规则 
