--- a/cicd/istio/5、服务入口.md
+++ b/cicd/istio/5、服务入口.md
@@ -1,3 +1,7 @@
+- [部署 Bookinfo](https://istio.io/latest/docs/examples/bookinfo/)
+
+-[示例地址](https://istio.io/latest/zh/docs/tasks/traffic-management/egress/egress-control/)
+
 ### 什么是服务入口(ServiceEntry)
 - 添加外部服务到网格内
   
