--- a/cicd/istio/6、流量转移 - 灰度发布.md
+++ b/cicd/istio/6、流量转移 - 灰度发布.md
@@ -54,5 +54,34 @@ spec:
   
 - 提示:通过 match header 的 User-Agent 实现
 
+具体修改内容如下：
+```yaml
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: reviews
+spec:
+  hosts:
+    - reviews
+  http:
+  - match:
+    - headers:
+        User-Agent:
+          exact: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.101 Safari/537.36
+    route:
+    - destination:
+        host: reviews
+        subset: v2 
+  - route:
+    - destination:
+        host: reviews
+        subset: v1
+      weight: 50
+    - destination:
+        host: reviews
+        subset: v3
+      weight: 50
+```
 
-
+### 清理
+> kubectl delete -f samples/bookinfo/networking/virtual-service-reviews-50-v3.yaml
