--- a/cicd/istio/21、项目准备及构建过程.md
+++ b/cicd/istio/21、项目准备及构建过程.md
@@ -390,8 +390,31 @@ spec:
 - 同步httpbin配置文件（默认是5分钟触发一次）
 > fluxctl sync --k8s-fwd-ns flux
 
+- 自定义git环境 [处理方式](https://docs.fluxcd.io/en/1.22.2/guides/use-private-git-host/)
+```shell
+$ # Find the fluxd daemon pod:
+$ kubectl get pods --all-namespaces -l name=flux
+NAMESPACE   NAME                    READY     STATUS    RESTARTS   AGE
+flux       flux-6d7d4df9fb-h9wll   1/1       Running   0          1h
+
+$ kubectl exec -n flux flux-6d7d4df9fb-h9wll -ti -- \
+env GITHOST="$GITHOST" GITREPO="$GITREPO" PS1="container$ " /bin/sh
+
+container$ git clone ssh://git@192.168.0.170:2222/flux/flux_config.git
+Cloning into <repository name>...
+No ECDSA host key is known for  <GITHOST> and you have requested strict checking.
+Host key verification failed.
+fatal: Could not read from remote repository
+
+container$ # ^ that was expected. Now we'll try with a modified known_hosts
+container$ ssh-keyscan 192.168.0.170 >> ~/.ssh/known_hosts
+container$ git clone $GITREPO
+Cloning into '...'
+
+```
+
 - 查看所有demo命名空间下的所有资源信息
 > kubectl get all -n demo
 
 - 测试上面两个服务的连通性情况
-> kubectl exec -it -n demo sleep-sdfs7sfs-2342s -c sleep -- curl http://httpbin.demo:8000/ip
+> kubectl exec -it -n demo sleep-854565cb79-zdrj4  -c sleep -- curl http://httpbin.demo:8000/ip
