feat: 通过熔断、限流、重试提升系统的弹性能力

--- a/cicd/istio/23、提升系统的弹性能力.md
+++ b/cicd/istio/23、提升系统的弹性能力.md
@@ -57,13 +57,66 @@
 - 配置熔断
 
 ### order
+- 在fufeng命名空间下启动istio的sidecar自动注入
+> kubectl label namespace fufeng istio-injection=enabled  
+
+- 在fufeng命名空间下创建应用
+```yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: httpbin
+  namespace: fufeng
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: httpbin
+  namespace: fufeng
+  labels:
+    app: httpbin
+    service: httpbin
+spec:
+  ports:
+  - name: http
+    port: 8000
+    targetPort: 80
+  selector:
+    app: httpbin
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: httpbin
+  namespace: fufeng
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: httpbin
+      version: v1
+  template:
+    metadata:
+      labels:
+        app: httpbin
+        version: v1
+    spec:
+      serviceAccountName: httpbin
+      containers:
+      - image: docker.io/kennethreitz/httpbin
+        imagePullPolicy: IfNotPresent
+        name: httpbin
+        ports:
+        - containerPort: 80
+```
+
 - 正常vs
 ```yaml
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: httpbin
-  namespace: demo
+  namespace: fufeng
 spec:
   hosts:
   - "*"
@@ -83,20 +136,21 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: httpbin
-  namespace: demo
+  namespace: fufeng
 spec:
   hosts:
     - "*"
   gateways:
     - httpbin-gateway
   http:
-    - route:
-        - destination:
-            host: httpbin
-            port:
-              number: 8000
-      timeout: 1s
+  - route:
+    - destination:
+        host: httpbin
+        port:
+          number: 8000
+    timeout: 1s
 ```
+> curl http://httpbin.fufeng:8000/delay/1
 
 - 重试
 ```yaml
@@ -104,7 +158,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: httpbin
-  namespace: demo
+  namespace: fufeng
 spec:
   hosts:
   - "*"
@@ -121,6 +175,7 @@ spec:
       perTryTimeout: 1s
     timeout: 8s
 ```
+> curl http://httpbin.fufeng:8000/delay/7
 
 - 熔断
 ```yaml
@@ -128,7 +183,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
   name: httpbin
-  namespace: demo
+  namespace: fufeng
 spec:
   host: httpbin
   trafficPolicy:
@@ -144,6 +199,5 @@ spec:
         baseEjectionTime: 3m
         maxEjectionPercent: 100
 ```
-
-
+> curl http://httpbin.fufeng:8000/status/500
 
