feat: 安全策略更新

--- a/cicd/istio/24、配置安全策略.md
+++ b/cicd/istio/24、配置安全策略.md
@@ -34,8 +34,11 @@
 - 在fufeng命名空间下启动istio的sidecar自动注入
 > kubectl label namespace fufeng istio-injection=enabled
 
+> kubectl label namespace ff istio-injection=enabled 
+
 - 创建应用
 ```yaml
+kubectl apply -f - <<EOF
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -82,6 +85,22 @@ spec:
         name: httpbin
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: httpbin-v2
+  namespace: fufeng
+  labels:
+    app: httpbin-v2
+    service: httpbin-v2
+spec:
+  ports:
+    - name: http
+      port: 8000
+      targetPort: 80
+  selector:
+    app: httpbin-v2          
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -213,6 +232,7 @@ spec:
           secret:
             secretName: sleep-secret
             optional: true
+EOF
 ```
 
 - 创建授权 - 特定服务，注意没有rule，表示deny当前服务
@@ -229,12 +249,13 @@ spec:
       app: httpbin
 EOF
 ```
-> 不通过：kubectl exec -it -n fufeng sleep-6bdb595bcb-wg6bc -c sleep -- curl "http://httpbin.fufeng:8000/get"
+> 不通过：kubectl exec -it -n fufeng sleep-68f7df5556-kh8rm -c sleep -- curl "http://httpbin.fufeng:8000/get"
 
-> 通过：kubectl exec -it -n fufeng sleep-6bdb595bcb-wg6bc -c sleep -- curl "http://httpbin-v2.fufeng:8000/get"
+> 通过：kubectl exec -it -n fufeng sleep-68f7df5556-kh8rm -c sleep -- curl "http://httpbin-v2.fufeng:8000/get"
 
 - 来源必须是fufeng ns
 ```yaml
+kubectl apply -f - <<EOF
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
@@ -248,10 +269,11 @@ spec:
        principals: ["cluster.local/ns/fufeng/sa/sleep"]
    - source:
        namespaces: ["fufeng"]
+EOF
 ```
-> 通过：kubectl exec -it -n fufeng sleep-6bdb595bcb-wg6bc -c sleep -- curl "http://httpbin.fufeng:8000/get"
+> 通过：kubectl exec -it -n fufeng sleep-68f7df5556-kh8rm -c sleep -- curl "http://httpbin.fufeng:8000/get"
 
-> 不通过： kubectl exec -it -n ff sleep-57ddb67999-bwbkq -c sleep -- curl "http://httpbin.fufeng:8000/get"
+> 不通过： kubectl exec -it -n ff sleep-586498cbb7-m7zhh -c sleep -- curl "http://httpbin.fufeng:8000/get"
 
 > 修改service account ff, 通过
 
@@ -277,9 +299,9 @@ spec:
        paths: ["/get"]
 EOF
 ```
-> 通过：kubectl exec -it -n fufeng sleep-6bdb595bcb-wg6bc -c sleep -- curl "http://httpbin.fufeng:8000/get"
+> 通过：kubectl exec -it -n fufeng sleep-68f7df5556-kh8rm -c sleep -- curl "http://httpbin.fufeng:8000/get"
 
-> 不通： kubectl exec -it -n fufeng sleep-6bdb595bcb-wg6bc -c sleep -- curl "http://httpbin.fufeng:8000/ip"
+> 不通： kubectl exec -it -n fufeng sleep-68f7df5556-kh8rm -c sleep -- curl "http://httpbin.fufeng:8000/ip"
 
 - 其他特定条件 - 请求头
 ```yaml
@@ -306,12 +328,15 @@ spec:
      values: ["test*"]
 EOF
 ```
-> 不通过：kubectl exec -it -n fufeng sleep-6bdb595bcb-wg6bc -c sleep -- curl "http://httpbin.fufeng:8000/get"
+> 不通过：kubectl exec -it -n fufeng sleep-68f7df5556-kh8rm -c sleep -- curl "http://httpbin.fufeng:8000/get"
 
-> 加token通过：kubectl exec -it -n fufeng sleep-6bdb595bcb-wg6bc -c sleep -- curl "http://httpbin.fufeng:8000/get" -H x-rfma-token:test1
+> 加token通过：kubectl exec -it -n fufeng sleep-68f7df5556-kh8rm -c sleep -- curl "http://httpbin.fufeng:8000/get" -H x-rfma-token:test1
 
 
+### 清理
+> kubectl delete ns ff
 
+> kubectl delete ns fufeng
 
 
 
