feat: go micro category

--- a/micro-with-containerization/doc/02.go-micro使用示例.md
+++ b/micro-with-containerization/doc/02.go-micro使用示例.md
@@ -36,4 +36,8 @@ docker run -d -e CONSUL_BIND_INTERFACE=eth0 consul agent -dev -join=172.17.0.2
 
 > http://127.0.0.1:8500/ui/dc1/services
 
+### 利用自定义的micro生成服务脚手架
+
+> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/category
+
 
