--- a/micro-with-containerization/doc/02.go-micro使用示例.md
+++ b/micro-with-containerization/doc/02.go-micro使用示例.md
@@ -38,6 +38,7 @@ docker run -d -e CONSUL_BIND_INTERFACE=eth0 consul agent -dev -join=172.17.0.2
 
 ### 利用自定义的micro生成服务脚手架
 
-> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/category
+> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/category category
 
+> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/product product
 
