--- a/micro-with-containerization/doc/02.go-micro使用示例.md
+++ b/micro-with-containerization/doc/02.go-micro使用示例.md
@@ -42,3 +42,7 @@ docker run -d -e CONSUL_BIND_INTERFACE=eth0 consul agent -dev -join=172.17.0.2
 
 > docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/product product
 
+> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/cart cart
+
+> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/cart cart
+
