--- a/micro-with-containerization/doc/02.go-micro使用示例.md
+++ b/micro-with-containerization/doc/02.go-micro使用示例.md
@@ -44,5 +44,44 @@ docker run -d -e CONSUL_BIND_INTERFACE=eth0 consul agent -dev -join=172.17.0.2
 
 > docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/cart cart
 
-> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/cart cart
+#### 生成简单的API项目
 
+> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro --type=api new github.com/LCY2013/thinking-in-go/micro-with-containerization/cart-api cart-api
+
+### 启动micro网关
+
+#### 拉取镜像
+
+> docker pull gharsallahmoez/micro
+
+#### 执行命令
+
+```shell
+docker run -d --name=micro-api-gateway \
+  --rm -p 8080:8080 \
+  gharsallahmoez/micro \
+  --registry=consul \
+  --registry_address=192.168.0.57:8500 \
+  api \
+  --handler=api \
+  --namespace=go.micro.api
+```
+
+```text
+-d 为后台运行模式
+-p指定镜像对外端口第一个8080是镜像对外的端口，第二个8080是micro 网关默认端口
+--name=micro_api_gw 指定镜像名称为 micro_api_gw
+ba526346c047 为镜像ID，可通过指令 docker images 查看
+--registry=etcd 指定服务注册的类型是etcd
+--registry_address=192.168.109.131:12379  指定服务注册的地址是192.168.109.131:12379，这个要根据自己的etcd集群来调整，我的设置的是这个
+--api_namespace=go.micro.api 指定网关的命名空间为api.tutor.com，这个就是我们刚刚在设置server名称时用到的，可根据自己的情况调整
+--api_handler=http 指定以http的方式请求server，micro还支持rpc，api等方式
+```
+
+#### 访问API
+
+> http://127.0.0.1:8080/cart-api/cartApi/findAll?user_id=1
+
+#### hystrix dashboard
+
+> http://localhost:9002/hystrix/monitor?stream=http%3A%2F%2F192.168.0.57%3A9096%2Fhystrix.stream
