--- a/micro-with-containerization/doc/02.go-micro使用示例.md
+++ b/micro-with-containerization/doc/02.go-micro使用示例.md
@@ -44,6 +44,8 @@ docker run -d -e CONSUL_BIND_INTERFACE=eth0 consul agent -dev -join=172.17.0.2
 
 > docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/cart cart
 
+> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro new github.com/LCY2013/thinking-in-go/micro-with-containerization/order order
+
 #### 生成简单的API项目
 
 > docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro --type=api new github.com/LCY2013/thinking-in-go/micro-with-containerization/cart-api cart-api
