feat: elk with pay

--- a/micro-with-containerization/doc/02.go-micro使用示例.md
+++ b/micro-with-containerization/doc/02.go-micro使用示例.md
@@ -53,6 +53,8 @@ docker run -d -e CONSUL_BIND_INTERFACE=eth0 consul agent -dev -join=172.17.0.2
 
 > docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro --type=api new github.com/LCY2013/thinking-in-go/micro-with-containerization/cart-api cart-api
 
+> docker run --rm -v $(pwd):$(pwd) -w $(pwd) luochunyun/micro --type=api new github.com/LCY2013/thinking-in-go/micro-with-containerization/payment-api payment-api
+
 ### 启动micro网关
 
 #### 拉取镜像
@@ -90,3 +92,7 @@ ba526346c047 为镜像ID，可通过指令 docker images 查看
 #### hystrix dashboard
 
 > http://localhost:9002/hystrix/monitor?stream=http%3A%2F%2F192.168.0.57%3A9096%2Fhystrix.stream
+
+### 访问支付转账API
+
+> http://127.0.0.1:8080/payment-api/paymentApi/payPalRefund?payment_id=paypal&refund_id=2dxfdsdf9032&money=0.1
